public/stylesheets/stylesheet.css
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

body {
  font-family: "Segoe UI", "Segoe WP", Helvetica, "Lucida Grande", sans-serif;
  color: #FFF;
  background-color: #111;
}

header {
  color: white;
  text-align: center;
}

header li a, a:hover {
  color: white;
  text-decoration: none;
}

h1 {
  font-size: 64px;
  margin-bottom: 10px;
}

h2 {
  font-size: 36px;
  margin-top: 40px;
}

h1, h2, h3 {
  font-weight: 100;
  text-align: center;
}

nav ul {
  list-style: none;
}

nav li {
  display: inline-block;
  margin-right: 15px;
  font-size: 20px;
}

p {
  line-height: 1.5;
}

.selected a {
  font-weight: bold;
}

.container {
  width: 1108px;
  margin-top: 25px;
  margin-bottom: 100px;
  margin-left: auto;
  margin-right: auto;
}

.screenshot {
  margin-top: 50px;
  background: url('/images/screenshot.png') no-repeat;
  width: 1108px;
  height: 640px;
  color: white;
  position: relative;
}

.screenshot .overlay {
  background: rgba(17, 17, 17, 0.9);
  position: absolute;
  padding: 20px 25px 20px 25px;
  color: #FFF;
  text-align: center;
  bottom: 6px;
  left: 6px;
  right: 6px;
}

.overlay h2 {
  font-size: 32px;
}

.features {
  margin-bottom: 20px;
}

.features li {
  display: inline-block;
  margin-right: 25px;
}

.download {
  padding: 10px 20px 10px 20px;
  background: #03961C;
  display: inline-block;
  width: 200px;
  font-size: 18px;
  float: center;
  margin-right: 50px;
}

.download small, .download-beta small {
  font-size: 14px;
}

.download, .download:hover {
  color: white;
  text-decoration: none;
}

.features-extended {
  margin-top: 40px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  padding-left: 40px;
}

.features-extended ul {
  list-style: none;
}

.features-extended li {
  float: left;
  width: 250px;
  margin-right: 20px;
}

.features-extended li h3 {
  font-size: 26px;
  margin-bottom: 10px;
}

.release-notes {
  margin-top: 75px;
}

.release-notes h1 {
  color: white;
  background: #00B159;
  display: table;
  font-size: 25px;
  padding: 10px;
  margin-top: 35px;
}

.release-notes h2 {
  color: white;
  background: #00AEDB;
  padding: 7px 10px 7px 10px;
  margin-left: 15px;
  margin-bottom: 10px;
  display: table;
  font-size: 15px;
}

.release-notes ul {
  margin-left: 55px;
}

.release-notes li {
  margin-bottom: 15px;
}

.development-info {
  margin-top: 80px;
}

.donate, .contact {
  margin-top: 25px;
}

.contact p, .donate p, .development-info p {
  margin-top: 5px;
  margin-bottom: 5px;
}

